--- a/bin/install
+++ b/bin/install
@@ -57,12 +57,19 @@ get_java() {
 	local destdir=$3
 
 	local url=
+	local signature=
+	local sigkey=
 	local base=http://download.oracle.com/otn-pub/java/jdk/
 	local oracle_version=$(echo $version | sed -e 's/\./u/g')
 
 	local s3base=https://s3-eu-west-1.amazonaws.com/repo.proemion.com
 
 	case $version in
+		corretto-8.202.08.2)
+			url=https://d2znqt9b1bc64u.cloudfront.net/amazon-corretto-8.202.08.2-linux-x64.tar.gz 
+			signature=https://d2znqt9b1bc64u.cloudfront.net/amazon-corretto-8.202.08.2-linux-x64.tar.gz.sig
+			sigkey=https://d1f2yzg3dx5xke.cloudfront.net/D95A3146.pub
+		;;
 		9.0.1) url=$base$version+11/jdk-$version'_'$(get_current_variant $variant) ;;
 		8.151) url=$s3base/jdk-$oracle_version-$variant ;;
 		8.144) url=$base$oracle_version-b01/090f390dda5b47b9b721c7dfaa008135/jdk-$oracle_version-$variant ;;
@@ -82,6 +89,27 @@ get_java() {
 		--retry 3 --retry-delay 3 \
 		-b oraclelicense=a \
 		-o $destdir/$variant $url
+    
+	if [ "$signature" != "" ] && [ "$sigkey" != "" ]; then
+		curl -fLC - \
+			--progress-bar --silent \
+			--retry 3 --retry-delay 3 \
+			-b oraclelicense=a \
+			-o $destdir/${variant}.sig $signature
+		curl -fLC - \
+			--progress-bar --silent \
+			--retry 3 --retry-delay 3 \
+			-b oraclelicense=a \
+			-o $destdir/${variant}.pub $sigkey
+		
+		gpg --import $destdir/${variant}.pub
+		if gpg --verify $destdir/${variant}.sig ; then
+			echo "Archive verification: successful"
+		else
+			ASDF_JAVA_ERROR="Archive verification: failed!"
+		fi
+		rm -f $destdir/${variant}.pub -f $destdir/${variant}.sig
+	fi
 
 	[[ $? != 0 ]] && ASDF_JAVA_ERROR="downloading java dist"
 }
@@ -118,7 +146,7 @@ unpack_tar() {
 		[[ $? == 0 ]] || ASDF_JAVA_ERROR="expanding java dist"
 		rm $variant
 
-		local pkg=$(echo * | grep jdk)
+		local pkg=$(echo * | grep -e jdk -e corretto)
 		mv $pkg/* .
 		rmdir $pkg
 	}; cd $origin
