--- a/bin/install
+++ b/bin/install
@@ -112,6 +112,12 @@ get_java() {
 			signature=${corretto_base}.sig
 			sigkey="A122542AB04F24E3"
 		;;
+		corretto-17.0.6.10.1)
+            local corretto_base="https://corretto.aws/downloads/resources/$(cut -d - -f2 <<< "$version")/amazon-$version-linux-x64.tar.gz"
+			url=${corretto_base}
+			signature=${corretto_base}.sig
+			sigkey="A122542AB04F24E3"
+		;;
 		9.0.1) url=$base$version+11/jdk-$version'_'$(get_current_variant $variant) ;;
 		8.151) url=$s3base/jdk-$oracle_version-$variant ;;
 		8.144) url=$base$oracle_version-b01/090f390dda5b47b9b721c7dfaa008135/jdk-$oracle_version-$variant ;;
